--- a/src/css/leaflet-style.css
+++ b/src/css/leaflet-style.css
@@ -603,7 +603,7 @@ body {
 }
 
 .leaflet-sidebar.collapsed {
-    width: 60px;
+    width: 80px;
     z-index: 10;
 }
 
@@ -658,9 +658,9 @@ body {
     padding: 0;
     display: flex;
     flex-direction: column;
-    gap: 12px;
-    width: 100%;
-    align-items: center;
+     gap: 12px;
+     width: 60%;
+    align-items: center; 
 }
 
 .leaflet-sidebar-tabs li {
@@ -692,7 +692,7 @@ body {
     background: var(--bg-light);
     color: var(--primary-color);
     border-color: var(--primary-color);
-    transform: scale(1.08);
+    /* transform: scale(1.08); */
     box-shadow: var(--shadow-orange);
 }
 
